--- a/manager/composer.json
+++ b/manager/composer.json
@@ -11,13 +11,16 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "finesse/swiftmailer-defaults-plugin": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.5",
         "ramsey/uuid": "^4.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "swiftmailer/swiftmailer": "^6.3",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
+        "symfony/event-dispatcher": "5.4.*",
         "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
