--- a/manager/config/services.yaml
+++ b/manager/config/services.yaml
@@ -23,11 +23,11 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     App\Model\User\Service\ConfirmTokenSender:
-        $from: { '%env(MAILER_FROM_EMAIL)%' : '%env(MAILER_FROM_NAME)%' }
+        $from: '%env(MAILER_FROM_EMAIL)%'
 
     App\Model\User\Service\ResetTokenSender:
-        $from: { '%env(MAILER_FROM_EMAIL)%': '%env(MAILER_FROM_NAME)%' }
+        $from: '%env(MAILER_FROM_EMAIL)%'
 
     App\Model\User\Service\ResetTokenizer:
-        factory: 'App\Container\Model\User\Service\ResetTokenizerFactory:create'
-        arguments: [ 'PT1H' ]
+        factory: ['App\Container\Model\User\Service\ResetTokenizerFactory', 'create']
+        arguments: ['PT1H']
